--- a/Balneario/nbproject/project.properties
+++ b/Balneario/nbproject/project.properties
@@ -53,7 +53,7 @@ javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
     ${javac.test.classpath}
-javadoc.additionalparam=
+javadoc.additionalparam=-tag pre:cm:"Precondition:" -tag post:cm:"Postcondition:"
 javadoc.author=false
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
